force-app/main/default/objects/Flight__c/fields/Baro_Altitude__c.field-meta.xml
<CustomField>
    <fullName>Baro_Altitude__c</fullName>
    <label>Barometric Altitude</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>