force-app/main/default/objects/Flight__c/fields/Callsign__c.field-meta.xml
<CustomField>
    <fullName>Callsign__c</fullName>
    <label>Callsign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>