force-app/main/default/objects/Flight__c/fields/Geo_Altitude__c.field-meta.xml
<CustomField>
    <fullName>Geo_Altitude__c</fullName>
    <label>Geometric Altitude</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>