force-app/main/default/objects/Flight__c/fields/ICAO24__c.field-meta.xml
<CustomField>
    <fullName>ICAO24__c</fullName>
    <externalId>true</externalId>
    <label>ICAO24</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>