force-app/main/default/objects/Flight__c/fields/Last_Contact__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact__c</fullName>
    <label>Last Contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>