force-app/main/default/objects/Flight__c/fields/On_Ground__c.field-meta.xml
<CustomField>
    <fullName>On_Ground__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On Ground</label>
    <type>Checkbox</type>
</CustomField>