force-app/main/default/objects/Flight__c/fields/Origin_Country__c.field-meta.xml
<CustomField>
    <fullName>Origin_Country__c</fullName>
    <label>Origin Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>