force-app/main/default/objects/Flight__c/fields/Position_Source__c.field-meta.xml
<CustomField>
    <fullName>Position_Source__c</fullName>
    <label>Position Source</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>