force-app/main/default/objects/Flight__c/fields/SPI__c.field-meta.xml
<CustomField>
    <fullName>SPI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SPI</label>
    <type>Checkbox</type>
</CustomField>