force-app/main/default/objects/Flight__c/fields/Squawk__c.field-meta.xml
<CustomField>
    <fullName>Squawk__c</fullName>
    <label>Squawk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>