force-app/main/default/objects/Flight__c/fields/Time_Position__c.field-meta.xml
<CustomField>
    <fullName>Time_Position__c</fullName>
    <label>Time Position</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>