force-app/main/default/objects/Flight__c/fields/True_Track__c.field-meta.xml
<CustomField>
    <fullName>True_Track__c</fullName>
    <label>True Track</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>