force-app/main/default/objects/Flight__c/fields/Velocity__c.field-meta.xml
<CustomField>
    <fullName>Velocity__c</fullName>
    <label>Velocity</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>