force-app/main/default/objects/Flight__c/fields/Vertical_Rate__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Rate__c</fullName>
    <label>Vertical Rate</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>