force-app/main/default/objects/Flight__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ICAO24__c</columns>
    <columns>Callsign__c</columns>
    <columns>Origin_Country__c</columns>
    <columns>On_Ground__c</columns>
    <columns>Velocity__c</columns>
    <columns>Baro_Altitude__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>